--- a/index.html
+++ b/index.html
@@ -3,37 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Button Centered</title>
     <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f5f5f5;
+            font-family: Arial, sans-serif;
+        }
+
         .link-button {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 15px 30px;
+            font-size: 18px;
             cursor: pointer;
             text-align: center;
             text-decoration: none;
-            outline: none;
             color: #fff;
             background-color: #4CAF50;
             border: none;
-            border-radius: 15px;
-            box-shadow: 0 9px #999;
+            border-radius: 8px;
+            box-shadow: 0 5px #999;
+            transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
         }
 
         .link-button:hover {
-            background-color: #3e8e41;
+            background-color: #45a049;
         }
 
         .link-button:active {
-            background-color: #3e8e41;
-            box-shadow: 0 5px #666;
-            transform: translateY(4px);
+            background-color: #45a049;
+            box-shadow: 0 3px #666;
+            transform: translateY(2px);
         }
     </style>
 </head>
 <body>
 
-<a href="wwww.github.com" class="link-button">Kunjungi Example.com</a>
+<a href="https://www.github.com" class="link-button">Kunjungi Example.com</a>
 
 </body>
 </html>
