--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-<a href="https://www.github.com" class="link-button">Kunjungi Example.com</a>
+<a href="https://www.youtube.com" class="link-button">Download BookChat/a>
 
 </body>
 </html>
