--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-<a href="https://www.youtube.com" class="link-button">Download BookChat>
+<a href="https://www.youtube.com" class="link-button">Download BookChat
 
 </body>
 </html>
